# easybuild-life-sciences

./: .gitignore  .gitmodules  .travis.yml  1  Contributed.md  Dockerfile  EasyBuild_Presentation.html  EasyBuild_Presentation.md  Python-2.7.12-foss-2016b.eb  Python-3.6.5-foss-2016b-fh3.html  Python-modules  R-3.5.2-foss-2018b.eb  README.md  clean_build_notes.md  config.cfg  easybuild.runlist  easybuild_and_lxd.md  easybuild_bootstrap.sh  exts_annotate.py  generate.sh  git_init.sh  howto.html  howto.md  index.html  install.sh  lxc_eb_setup.sh  os-dependencies.apt  os-dependencies.yum  osdep.py  prox.sh  requirements.txt  toolchain-upgrade.md  update-eb-files.sh
Rust/: Rust-1.37.0-GCCcore-8.3.0.eb
_presentation/: EB_Presentation.html
docs/: .Bioconductor.html.swp  ._config.yml.swp  .modules-14.04.json.swp  .nfs0000000005782a9a00004b59  .r.md.swp  1  Bioconductor.html  DOT.html  Dot.html  Gemfile  Notes  Python-2.7.13-foss-2016b-fh2.html  Python-2.7.13-foss-2016b.html  Python-2.7.14-foss-2016b-fh1.html  Python-2.7.15-foss-2016b-fh1.html  Python-3.4.5-foss-2016b-fh1.html  Python-3.4.5-foss-2016b-fh1.md  Python-3.5.2-foss-2016b-fh2.html  Python-3.5.2-foss-2016b-fh2.md  Python-3.6.0-foss-2016b.html  Python-3.6.1-foss-2016b-fh1.html  Python-3.6.1-foss-2016b-fh2.html  Python-3.6.1-foss-2016b-fh3.html  Python-3.6.1-foss-2016b-fh3.md  Python-3.6.2-foss-2016b-fh2.html  Python-3.6.4-foss-2016b-fh1.html  Python-3.6.4-foss-2016b-fh1.md  Python-3.6.4-foss-2016b-fh2.html  Python.html  (+79 more)
easyconfigs/m/MACHINA/: CMakeLists.txt  MACHINA-1.0-foss-2016b.eb  MACHINA-1.2-GCC-13.2.0.eb
(+3655 files in other folders)
